--- a/dct_widgets/wbbox/wbbox.ui
+++ b/dct_widgets/wbbox/wbbox.ui
@@ -245,58 +245,20 @@
       <property name="bottomMargin">
        <number>0</number>
       </property>
-      <item row="2" column="0">
-       <widget class="QPushButton" name="whiteBalanceRedResetButton">
-        <property name="text">
-         <string>Reset to Default</string>
+      <item row="1" column="7">
+       <spacer name="horizontalSpacer_4">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
         </property>
-       </widget>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
       </item>
-      <item row="1" column="8">
-       <layout class="QVBoxLayout" name="verticalLayout_4">
-        <item>
-         <widget class="SingleChannelKnobBox" name="BlueGain">
-          <property name="minimumSize">
-           <size>
-            <width>220</width>
-            <height>230</height>
-           </size>
-          </property>
-          <property name="maximumSize">
-           <size>
-            <width>220</width>
-            <height>230</height>
-           </size>
-          </property>
-          <property name="focusPolicy">
-           <enum>Qt::TabFocus</enum>
-          </property>
-          <property name="toolTip">
-           <string/>
-          </property>
-          <property name="whatsThis">
-           <string/>
-          </property>
-          <property name="title">
-           <string>Blue Gain</string>
-          </property>
-          <property name="maxRounds" stdset="0">
-           <number>4</number>
-          </property>
-          <property name="maxAngle" stdset="0">
-           <number>180</number>
-          </property>
-          <property name="needleImage" stdset="0">
-           <pixmap resource="../../resource/resource.qrc">:/images/needle/dial-pointer.png</pixmap>
-          </property>
-          <property name="backgroundImage" stdset="0">
-           <pixmap resource="../../resource/resource.qrc">:/images/back/dial-back-blue_full.png</pixmap>
-          </property>
-         </widget>
-        </item>
-       </layout>
-      </item>
-      <item row="1" column="3">
+      <item row="1" column="4">
        <layout class="QHBoxLayout" name="horizontalLayout">
         <item>
          <widget class="SingleChannelKnobBox" name="GreenGain">
@@ -343,7 +305,7 @@
         </item>
        </layout>
       </item>
-      <item row="1" column="0">
+      <item row="1" column="2">
        <layout class="QVBoxLayout" name="verticalLayout_3">
         <item>
          <widget class="SingleChannelKnobBox" name="RedGain">
@@ -387,6 +349,84 @@
         </item>
        </layout>
       </item>
+      <item row="1" column="3">
+       <spacer name="horizontalSpacer">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item row="2" column="4">
+       <widget class="QPushButton" name="whiteBalanceGreenResetButton">
+        <property name="text">
+         <string>Reset to Default</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="6">
+       <layout class="QVBoxLayout" name="verticalLayout_4">
+        <item>
+         <widget class="SingleChannelKnobBox" name="BlueGain">
+          <property name="minimumSize">
+           <size>
+            <width>220</width>
+            <height>230</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>220</width>
+            <height>230</height>
+           </size>
+          </property>
+          <property name="focusPolicy">
+           <enum>Qt::TabFocus</enum>
+          </property>
+          <property name="toolTip">
+           <string/>
+          </property>
+          <property name="whatsThis">
+           <string/>
+          </property>
+          <property name="title">
+           <string>Blue Gain</string>
+          </property>
+          <property name="maxRounds" stdset="0">
+           <number>4</number>
+          </property>
+          <property name="maxAngle" stdset="0">
+           <number>180</number>
+          </property>
+          <property name="needleImage" stdset="0">
+           <pixmap resource="../../resource/resource.qrc">:/images/needle/dial-pointer.png</pixmap>
+          </property>
+          <property name="backgroundImage" stdset="0">
+           <pixmap resource="../../resource/resource.qrc">:/images/back/dial-back-blue_full.png</pixmap>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item row="2" column="6">
+       <widget class="QPushButton" name="whiteBalanceBlueResetButton">
+        <property name="text">
+         <string>Reset to Default</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="2">
+       <widget class="QPushButton" name="whiteBalanceRedResetButton">
+        <property name="text">
+         <string>Reset to Default</string>
+        </property>
+       </widget>
+      </item>
       <item row="1" column="1">
        <spacer name="horizontalSpacer_3">
         <property name="orientation">
@@ -400,8 +440,8 @@
         </property>
        </spacer>
       </item>
-      <item row="1" column="4">
-       <spacer name="horizontalSpacer_4">
+      <item row="1" column="5">
+       <spacer name="horizontalSpacer_2">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
@@ -412,20 +452,6 @@
          </size>
         </property>
        </spacer>
-      </item>
-      <item row="2" column="3">
-       <widget class="QPushButton" name="whiteBalanceGreenResetButton">
-        <property name="text">
-         <string>Reset to Default</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="8">
-       <widget class="QPushButton" name="whiteBalanceBlueResetButton">
-        <property name="text">
-         <string>Reset to Default</string>
-        </property>
-       </widget>
       </item>
      </layout>
     </widget>
@@ -458,93 +484,20 @@
       <property name="bottomMargin">
        <number>0</number>
       </property>
-      <item row="1" column="7">
-       <widget class="SingleChannelKnobBox" name="Contrast">
-        <property name="minimumSize">
-         <size>
-          <width>200</width>
-          <height>230</height>
-         </size>
-        </property>
-        <property name="maximumSize">
-         <size>
-          <width>200</width>
-          <height>230</height>
-         </size>
-        </property>
-        <property name="focusPolicy">
-         <enum>Qt::TabFocus</enum>
-        </property>
-        <property name="toolTip">
-         <string/>
-        </property>
-        <property name="whatsThis">
-         <string/>
-        </property>
-        <property name="title">
-         <string>Contrast</string>
-        </property>
-        <property name="maximum" stdset="0">
-         <number>255</number>
-        </property>
-        <property name="comma" stdset="0">
-         <number>7</number>
-        </property>
-        <property name="maxAngle" stdset="0">
-         <number>150</number>
-        </property>
-        <property name="needleImage" stdset="0">
-         <pixmap resource="../../resource/resource.qrc">:/images/needle/dial-pointer.png</pixmap>
-        </property>
-        <property name="backgroundImage" stdset="0">
-         <pixmap resource="../../resource/resource.qrc">:/images/back/dial-back-gray.png</pixmap>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="3">
-       <widget class="SingleChannelKnobBox" name="Saturation">
-        <property name="minimumSize">
-         <size>
-          <width>200</width>
-          <height>230</height>
-         </size>
-        </property>
-        <property name="maximumSize">
-         <size>
-          <width>200</width>
-          <height>230</height>
-         </size>
-        </property>
-        <property name="focusPolicy">
-         <enum>Qt::TabFocus</enum>
-        </property>
-        <property name="toolTip">
-         <string/>
-        </property>
-        <property name="whatsThis">
-         <string/>
-        </property>
-        <property name="title">
-         <string>Saturation</string>
-        </property>
-        <property name="maximum" stdset="0">
-         <number>255</number>
-        </property>
-        <property name="comma" stdset="0">
-         <number>7</number>
-        </property>
-        <property name="maxAngle" stdset="0">
-         <number>150</number>
-        </property>
-        <property name="needleImage" stdset="0">
-         <pixmap resource="../../resource/resource.qrc">:/images/needle/dial-pointer.png</pixmap>
-        </property>
-        <property name="backgroundImage" stdset="0">
-         <pixmap resource="../../resource/resource.qrc">:/images/back/dial-back-gray.png</pixmap>
-        </property>
-       </widget>
-      </item>
       <item row="1" column="5">
+       <spacer name="horizontalSpacer_6">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item row="1" column="6">
        <widget class="SingleChannelKnobBox" name="Brightness">
         <property name="minimumSize">
          <size>
@@ -590,29 +543,8 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="5">
-       <widget class="QPushButton" name="brightnessResetButton">
-        <property name="text">
-         <string>Reset to Default</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="3">
-       <widget class="QPushButton" name="saturationResetButton">
-        <property name="text">
-         <string>Reset to Default</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="0">
-       <widget class="QPushButton" name="hueResetButton">
-        <property name="text">
-         <string>Reset to Default</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="6">
-       <spacer name="hs_5">
+      <item row="1" column="1">
+       <spacer name="hs_3">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
@@ -624,7 +556,84 @@
         </property>
        </spacer>
       </item>
-      <item row="1" column="0">
+      <item row="1" column="8">
+       <widget class="SingleChannelKnobBox" name="Contrast">
+        <property name="minimumSize">
+         <size>
+          <width>200</width>
+          <height>230</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>200</width>
+          <height>230</height>
+         </size>
+        </property>
+        <property name="focusPolicy">
+         <enum>Qt::TabFocus</enum>
+        </property>
+        <property name="toolTip">
+         <string/>
+        </property>
+        <property name="whatsThis">
+         <string/>
+        </property>
+        <property name="title">
+         <string>Contrast</string>
+        </property>
+        <property name="maximum" stdset="0">
+         <number>255</number>
+        </property>
+        <property name="comma" stdset="0">
+         <number>7</number>
+        </property>
+        <property name="maxAngle" stdset="0">
+         <number>150</number>
+        </property>
+        <property name="needleImage" stdset="0">
+         <pixmap resource="../../resource/resource.qrc">:/images/needle/dial-pointer.png</pixmap>
+        </property>
+        <property name="backgroundImage" stdset="0">
+         <pixmap resource="../../resource/resource.qrc">:/images/back/dial-back-gray.png</pixmap>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="6">
+       <widget class="QPushButton" name="brightnessResetButton">
+        <property name="text">
+         <string>Reset to Default</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="3">
+       <spacer name="horizontalSpacer_5">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item row="2" column="8">
+       <widget class="QPushButton" name="contrastResetButton">
+        <property name="text">
+         <string>Reset to Default</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="2">
+       <widget class="QPushButton" name="hueResetButton">
+        <property name="text">
+         <string>Reset to Default</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="2">
        <widget class="SingleChannelKnobBox" name="Hue">
         <property name="minimumSize">
          <size>
@@ -667,21 +676,51 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="1">
-       <spacer name="hs_3">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>40</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
       <item row="1" column="4">
-       <spacer name="hs_4">
+       <widget class="SingleChannelKnobBox" name="Saturation">
+        <property name="minimumSize">
+         <size>
+          <width>200</width>
+          <height>230</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>200</width>
+          <height>230</height>
+         </size>
+        </property>
+        <property name="focusPolicy">
+         <enum>Qt::TabFocus</enum>
+        </property>
+        <property name="toolTip">
+         <string/>
+        </property>
+        <property name="whatsThis">
+         <string/>
+        </property>
+        <property name="title">
+         <string>Saturation</string>
+        </property>
+        <property name="maximum" stdset="0">
+         <number>255</number>
+        </property>
+        <property name="comma" stdset="0">
+         <number>7</number>
+        </property>
+        <property name="maxAngle" stdset="0">
+         <number>150</number>
+        </property>
+        <property name="needleImage" stdset="0">
+         <pixmap resource="../../resource/resource.qrc">:/images/needle/dial-pointer.png</pixmap>
+        </property>
+        <property name="backgroundImage" stdset="0">
+         <pixmap resource="../../resource/resource.qrc">:/images/back/dial-back-gray.png</pixmap>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="9">
+       <spacer name="hs_5">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
@@ -693,12 +732,28 @@
         </property>
        </spacer>
       </item>
-      <item row="2" column="7">
-       <widget class="QPushButton" name="contrastResetButton">
+      <item row="2" column="4">
+       <widget class="QPushButton" name="saturationResetButton">
         <property name="text">
          <string>Reset to Default</string>
         </property>
        </widget>
+      </item>
+      <item row="1" column="7">
+       <spacer name="horizontalSpacer_7">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeType">
+         <enum>QSizePolicy::Expanding</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
       </item>
      </layout>
     </widget>
@@ -739,7 +794,6 @@
   <tabstop>BlueGain</tabstop>
   <tabstop>Saturation</tabstop>
   <tabstop>Brightness</tabstop>
-  <tabstop>Contrast</tabstop>
  </tabstops>
  <resources>
   <include location="../../resource/resource.qrc"/>
