--- a/dct_widgets/connectdialog/connectdialog.ui
+++ b/dct_widgets/connectdialog/connectdialog.ui
@@ -374,6 +374,9 @@
            <property name="focusPolicy">
             <enum>Qt::WheelFocus</enum>
            </property>
+           <property name="value">
+            <number>1</number>
+           </property>
           </widget>
          </item>
         </layout>
