Update camera ROI offset upon video mode change

--- a/dct_widgets/roibox/roibox.ui
+++ b/dct_widgets/roibox/roibox.ui
@@ -20,7 +20,7 @@
    <item>
     <widget class="QLabel" name="label">
      <property name="text">
-      <string>Region of Interest</string>
+      <string>Statistics Region of Interest</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
